Program runs fine, except if the user enter a anything that is not a number it will break the program, I could not figure out how to fix that.

--- a/number_app/static/style.css
+++ b/number_app/static/style.css
@@ -1,3 +1,19 @@
+
 body {
     text-align: center;
+}
+
+form {
+    margin: 1%;
+}
+
+#label-container {
+    margin: 2%;
+    height: 40%;
+    font-size: xx-large;
+    color: rgb(39, 41, 53);
+}
+
+h5 {
+    color: rgb(255, 183, 0);
 }
